@@ -2,6 +2,7 @@ package pl.sda.czwa;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.assertj.core.api.Condition;
@@ -19,13 +20,13 @@ public class AssertJExampleTest {
             .isNotNull()
             .isExactlyInstanceOf(String.class);
 
-        List<String> names = List.of("John", "Tim", "Ben");
+        List<String> names = Arrays.asList("John", "Tim", "Ben");
 
         assertThat(names).contains("Tim")
             .doesNotContain("Bill");
 
         assertThat("John").isIn(names);
 
-        assertThat(names).isEqualTo(List.of("John", "Tim", "Ben"));
+        assertThat(names).isEqualTo(Arrays.asList("John", "Tim", "Ben"));
     }
 }
