@@ -3,6 +3,7 @@ package pl.sda.czwa;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.Test;
@@ -16,8 +17,8 @@ public class FirstTest {
         int c = a * b;
         assertEquals(c, 6);
 
-        List<Integer> ints = List.of(1, 2, 3);
+        List<Integer> ints = Arrays.asList(1, 2, 3);
         assertNotNull(ints);
-        assertEquals(ints, List.of(1,2,3));
+        assertEquals(ints, Arrays.asList(1, 2, 3));
     }
 }
